--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 
 
-<title>README.utf8.md</title>
+<title>contact.utf8.md</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,6 +22,9 @@
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/font-awesome-5.0.13/css/fa-svg-with-js.css" rel="stylesheet" />
+<script src="site_libs/font-awesome-5.0.13/js/fontawesome-all.min.js"></script>
+<script src="site_libs/font-awesome-5.0.13/js/fa-v4-shims.min.js"></script>
 
 <style type="text/css">code{white-space: pre;}</style>
 <style type="text/css">
@@ -203,9 +206,24 @@ $(document).ready(function () {
 </div>
 
 
-<div id="icms2017.github.io" class="section level1">
-<h1>icms2017.github.io</h1>
-<p>iCMS2017 &amp; uRos2017 - Asia Pacific</p>
+<hr />
+<hr />
+<p><link rel="stylesheet" href="styles.css" type="text/css"></p>
+<div id="contact-us" class="section level2">
+<h2>Contact Us</h2>
+<p>E-mail: <a href="mailto:icms2017@icmskdh.net">icms2017@icmskdh.net</a></p>
+<p>Phone :<br />
++604-456 2506 (Assoc. Prof. Dr Kor Liew Kee)<br />
++604-456 2406 (Ms Ashmahani Nayan)</p>
+<p>Address:<br />
+Secretariat iCMS2017<br />
+Faculty of Computer &amp; Mathematical Sciences<br />
+Universiti Teknologi MARA Kedah Branch,<br />
+Sungai Petani Campus<br />
+08400 Merbok<br />
+KEDAH, MALAYSIA</p>
+<p><br/></p>
+<p><a href="https://ariff118.github.io/icms2017.github.io/">Main Page</a></p>
 </div>
 
 
