--- a/index.html
+++ b/index.html
@@ -348,22 +348,22 @@ Transcending Boundaries, Embracing Multi-disciplinary Diversities
 </colgroup>
 <thead>
 <tr class="header">
-<th><img src="images/uitm.png" style="width:50%; margin-right: 18px" align="left"></th>
-<th><img src="images/nis.png" style="width:50%; margin-right: 18px" align="left"></th>
-<th><img src="images/eco.jpg" style="width:50%; margin-right: 18px" align="left"></th>
-<th><img src="images/ues.png" style="width:50%; margin-right: 18px" align="left"></th>
-<th><img src="images/ub.jpg" style="width:50%; margin-right: 18px" align="left"></th>
-<th><img src="images/ntu.jpg" style="width:50%; margin-right: 18px" align="left"></th>
+<th align="center"><img src="images/uitm.png" style="width:80%; margin-right: 18px" align="center"></th>
+<th align="center"><img src="images/nis.png" style="width:80%; margin-right: 18px" align="center"></th>
+<th align="center"><img src="images/eco.jpg" style="width:80%; margin-right: 18px" align="center"></th>
+<th align="center"><img src="images/ues.png" style="width:80%; margin-right: 18px" align="center"></th>
+<th align="center"><img src="images/ub.jpg" style="width:80%; margin-right: 18px" align="center"></th>
+<th align="center"><img src="images/ntu.jpg" style="width:80%; margin-right: 18px" align="center"></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>Kedah Branch Campus</td>
-<td>National Institute of Statistics, Romania</td>
-<td>Ecological University of Bucharest</td>
-<td>The Bucharest University of Economic Studies</td>
-<td>The University of Bucharest</td>
-<td>NicolaeTitulescu University of Bucharest</td>
+<td align="center">Kedah Branch Campus</td>
+<td align="center">National Institute of Statistics, Romania</td>
+<td align="center">Ecological University of Bucharest</td>
+<td align="center">The Bucharest University of Economic Studies</td>
+<td align="center">The University of Bucharest</td>
+<td align="center">NicolaeTitulescu University of Bucharest</td>
 </tr>
 </tbody>
 </table>
@@ -374,18 +374,66 @@ Transcending Boundaries, Embracing Multi-disciplinary Diversities
 <h2>Speakers</h2>
 <div id="matthias-templ-phd" class="section level3">
 <h3>Matthias Templ, PhD</h3>
-<p><img src="images/matthias.png" style="width:20%; margin-right: 18px" align="center"><br />
-Dr Matthias Templ is the owner of data analysis company OG. He obtained his PhD in Technical Mathematics from Vienna University of Technology and was an associate professor at the same university. Currently Dr Temple lectures at the Institute of Data Analysis and Process Design, Zurich University of Applied Sciences, Switzerland. He also holds a position as a consultant to the Palacký University Olomouc, Czech Republic. Dr Templ is a researcher at the Quality and Methods Unit at Statistics Austria. His other consultation works include for the World Bank and the OECD. His main research interest is in the area of imputation, statistical disclosure control, visualization, compositional data analysis, computational statistics, teaching in statistics and cluster analysis. He participated in many European research projects, to name one of those: the AMELI project for adequate estimation of poverty and social exclusion. Dr Templ has more than 280 scientific contributions in books, scientific journals and conferences as well as more than 40 papers in well-known indexed scientific journals. He is the author and maintainer of several R packages for official statistics, such as the <code>sdcMicro</code> package for statistical disclosure control, the <code>VIM</code> package for visualization and imputation of missing values, the <code>simPop</code> package for synthetic population simulation, and the <code>robCompositions</code> package for robust analysis of compositional data. He is also a co-author to many other packages. In addition, Dr. Matthias Templ is the editor-in-chief of the Austrian Journal of Statistics; associate editor for Springer’s Journal Wirtschafts-und Sozialstatistische Archiv; editor for the journal The Register; and on the editorial board of three other journals – JWARP journal, The Journal Transactions on Data Privacy, and the Journal Frontiers in Biomedical Physics</p>
+<table>
+<colgroup>
+<col width="24%" />
+<col width="75%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center">Matthias Templ, PhD</th>
+<th align="left"></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"><img src="images/matthias.png" style="width:90%; margin-right: 18px" align="center"></td>
+<td align="left">Dr Matthias Templ is the owner of data analysis company OG. He obtained his PhD in Technical Mathematics from Vienna University of Technology and was an associate professor at the same university. Currently Dr Temple lectures at the Institute of Data Analysis and Process Design, Zurich University of Applied Sciences, Switzerland. He also holds a position as a consultant to the Palacký University Olomouc, Czech Republic. Dr Templ is a researcher at the Quality and Methods Unit at Statistics Austria. His other consultation works include for the World Bank and the OECD. His main research interest is in the area of imputation, statistical disclosure control, visualization, compositional data analysis, computational statistics, teaching in statistics and cluster analysis. He participated in many European research projects, to name one of those: the AMELI project for adequate estimation of poverty and social exclusion. Dr Templ has more than 280 scientific contributions in books, scientific journals and conferences as well as more than 40 papers in well-known indexed scientific journals. He is the author and maintainer of several R packages for official statistics, such as the <code>sdcMicro</code> package for statistical disclosure control, the <code>VIM</code> package for visualization and imputation of missing values, the <code>simPop</code> package for synthetic population simulation, and the <code>robCompositions</code> package for robust analysis of compositional data. He is also a co-author to many other packages. In addition, Dr. Matthias Templ is the editor-in-chief of the Austrian Journal of Statistics; associate editor for Springer’s Journal Wirtschafts-und Sozialstatistische Archiv; editor for the journal The Register; and on the editorial board of three other journals – JWARP journal, The Journal Transactions on Data Privacy, and the Journal Frontiers in Biomedical Physics</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="professor-dr.nicolaas-jan-dirk-nagelkerke" class="section level3">
 <h3>Professor Dr. Nicolaas Jan Dirk Nagelkerke</h3>
-<p><img src="images/nico.png" style="width:20%; margin-right: 18px" align="center"><br />
-Professor Nagelkerke obtained his PhD in biostatistics from the University of Amsterdam. The Nagelkerke <em><span class="math inline">\(R^2\)</span></em> coefficient of determination adopted by SAS and SPSS statistical packages in their logistic regression tools is attributed to Professor Nagelkerke’s work published in Biometrika. He has over 400 publications, mostly in international peer reviewed journals. Professor Nagelkerke is a biostatistician, an epidemiologist and a mathematical modeller with experience in teaching and research and statistical consultancy works in health related industry in Europe, Canada, Africa, Middle East and South East Asia. He has extensive experience in infectious diseases and epidemiological research and modelling, notably TB and HIV/AIDS. His collaboration works included with the Centre for Global Health Research (University of Toronto); WHO in West Africa (burden of disease of tuberculosis), and UNAIDS (mathematical modelling on HIV epidemics). He also did consultancies for the World Bank on mathematical modelling on the impact of antiretroviral therapy in India and on modelling the effects of DOTS(+) on TB control in the Russian Federation. He was attached, to name a few, with the Malawi-Liverpool Welcome Trust, Malawi; Institute of Public Health, United Arab Emirates University; Eramus Medical Center, Rotterdam; Medical Statistics Department of Leiden University; Royal Netherlands Tuberculosis Association; Netherlands National Institute of Public Health and the Environment; Nairobi University; Manitoba University and taught at the Cho Ray Hospital HCM City, Vietnam.</p>
+<table>
+<colgroup>
+<col width="24%" />
+<col width="75%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center">Professor Dr. Nicolaas Jan Dirk Nagelkerke</th>
+<th align="left"></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"><img src="images/nico.png" style="width:90%; margin-right: 18px" align="center"></td>
+<td align="left">Professor Nagelkerke obtained his PhD in biostatistics from the University of Amsterdam. The Nagelkerke <em><span class="math inline">\(R^2\)</span></em> coefficient of determination adopted by SAS and SPSS statistical packages in their logistic regression tools is attributed to Professor Nagelkerke’s work published in Biometrika. He has over 400 publications, mostly in international peer reviewed journals. Professor Nagelkerke is a biostatistician, an epidemiologist and a mathematical modeller with experience in teaching and research and statistical consultancy works in health related industry in Europe, Canada, Africa, Middle East and South East Asia. He has extensive experience in infectious diseases and epidemiological research and modelling, notably TB and HIV/AIDS. His collaboration works included with the Centre for Global Health Research (University of Toronto); WHO in West Africa (burden of disease of tuberculosis), and UNAIDS (mathematical modelling on HIV epidemics). He also did consultancies for the World Bank on mathematical modelling on the impact of antiretroviral therapy in India and on modelling the effects of DOTS(+) on TB control in the Russian Federation. He was attached, to name a few, with the Malawi-Liverpool Welcome Trust, Malawi; Institute of Public Health, United Arab Emirates University; Eramus Medical Center, Rotterdam; Medical Statistics Department of Leiden University; Royal Netherlands Tuberculosis Association; Netherlands National Institute of Public Health and the Environment; Nairobi University; Manitoba University and taught at the Cho Ray Hospital HCM City, Vietnam.</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="professor-dr-martin-everett" class="section level3">
 <h3>Professor Dr Martin Everett</h3>
-<p><img src="images/martin.png" style="width:20%; margin-right: 18px" align="center"><br />
-Professor Martin Everett joined University of Manchester in 2009 having previously worked at East London, Westminster and Greenwich universities. He has helped cofound the Mitchell Centre for Social Network Analysis which evolved from the existing Manchester Social Networks Group. He is a past president of the International Network for Social Network Analysis (INSNA) and a Simmel award holder (the highest award given by the organization). He was elected an academician of the Academy of Social Sciences in 2004. Professor Everett co-author with Steve Borgatti in the development of the software package UCINET, the world’s most commonly used software for analyzing social network data. He has been consulted extensively on the use of networks with government agencies as well as public and private companies. He has co-authored two books and published over 80 journal articles. Professor Everett is also the co-editor of the journal Social Networks. The Impact Factor of the journal is 2.784 with 5-Year Impact Factor of 4.113, and SCImago Journal Rank (SJR) of 2.070.</p>
+<table>
+<colgroup>
+<col width="24%" />
+<col width="75%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th align="center">Professor Dr. martin Everett</th>
+<th align="left"></th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="center"><img src="images/martin.png" style="width:90%; margin-right: 18px" align="center"></td>
+<td align="left">Professor Martin Everett joined University of Manchester in 2009 having previously worked at East London, Westminster and Greenwich universities. He has helped cofound the Mitchell Centre for Social Network Analysis which evolved from the existing Manchester Social Networks Group. He is a past president of the International Network for Social Network Analysis (INSNA) and a Simmel award holder (the highest award given by the organization). He was elected an academician of the Academy of Social Sciences in 2004. Professor Everett co-author with Steve Borgatti in the development of the software package UCINET, the world’s most commonly used software for analyzing social network data. He has been consulted extensively on the use of networks with government agencies as well as public and private companies. He has co-authored two books and published over 80 journal articles. Professor Everett is also the co-editor of the journal Social Networks. The Impact Factor of the journal is 2.784 with 5-Year Impact Factor of 4.113, and SCImago Journal Rank (SJR) of 2.070.</td>
+</tr>
+</tbody>
+</table>
 <p><br/></p>
 </div>
 </div>
@@ -455,8 +503,8 @@ The course will: 1) Introduce the idea of Social Network Analysis; 2) Explain ho
 <h3>International Scientific Committee</h3>
 <table>
 <colgroup>
-<col width="50%" />
-<col width="50%" />
+<col width="22%" />
+<col width="77%" />
 </colgroup>
 <thead>
 <tr class="header">
@@ -585,7 +633,7 @@ Wan Zulkipli Wan Salleh</p>
 </div>
 <div id="contact-us" class="section level2">
 <h2>Contact Us</h2>
-<p>E-mail: <a href="mailto:icms2017@icmskdh.net">icms2017@icmskdh.net</a></p>
+<p>E-mail: <a href="mailto:icms2017@icmskdh.net" class="email">icms2017@icmskdh.net</a></p>
 <p>Phone :<br />
 +604-456 2506 (Assoc. Prof. Dr Kor Liew Kee)<br />
 +604-456 2406 (Ms Ashmahani Nayan)</p>
