--- a/contact.html
+++ b/contact.html
@@ -211,7 +211,7 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <div id="contact-us" class="section level2">
 <h2>Contact Us</h2>
-<p>E-mail: <a href="mailto:icms2017@icmskdh.net">icms2017@icmskdh.net</a></p>
+<p>E-mail: <a href="mailto:icms2017@icmskdh.net" class="email">icms2017@icmskdh.net</a></p>
 <p>Phone :<br />
 +604-456 2506 (Assoc. Prof. Dr Kor Liew Kee)<br />
 +604-456 2406 (Ms Ashmahani Nayan)</p>
